# PackHound

./: .gitignore  Cargo.toml  README.md  com.github.packhound.desktop
.github/workflows/: ci.yml  release.yml
scripts/: build-appimage.sh  fetch-appimage-tools.sh
src/: config.rs  main.rs  update.rs
src/addon/: installer.rs  mod.rs  registry.rs  toc.rs
src/curseforge/: client.rs
src/github/: client.rs  mod.rs  resolver.rs
src/ui/: add_dialog.rs  mod.rs  settings.rs  window.rs
